# ViajaYa

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  docker-compose.yml  package-lock.json
backend/: .env.example  CLAUDE.md  pyproject.toml
backend/app/: main.py
backend/app/api/: deps.py  errors.py
backend/app/api/v1/: events.py  (+1 more)
backend/app/application/: dto.py  interfaces.py  token_issuer.py
backend/app/domain/: entities.py  exceptions.py  repositories.py  ride_policy.py  service_area.py  value_objects.py
backend/app/infrastructure/: config.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_create_users.py  0002_create_ride_requests.py  0003_add_payment_method.py  0004_create_saved_places.py  0005_drivers_and_offers.py  0006_normalize_enum_values.py  0007_ride_ratings.py  0008_ride_last_seen_at.py  0009_drop_ride_last_seen_at.py  0010_offer_rider_accepted_at.py  0011_drop_offer_rider_accepted.py  0012_ride_paused.py  0013_ride_terminal_timestamps.py  0014_ride_rating_skips.py  0015_unique_active_ride_per_rider.py  0016_driver_ride_dismissals.py
backend/scripts/: seed.py  smoke_ws.py
backend/tests/: conftest.py  fakes.py
backend/tests/e2e/: test_auth_api.py  test_modify_ride.py  test_negotiation_ws.py  test_offers_flow_api.py  test_rides_api.py  test_saved_places_api.py
backend/tests/unit/: test_accept_atomically.py  test_offer_use_cases.py  test_presence.py  test_rating_use_cases.py  test_realtime_hub.py  test_ride_use_cases.py  test_saved_place_use_cases.py  test_service_area.py  test_sqlalchemy_ride_repository.py  test_use_cases.py  (+1 more)
(+199 files in other folders)
